--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ _testmain.go
 # Sublime Text workspace/project files
 *.sublime-workspace
 *.sublime-project
+
+# Project specific executable
+gomaild
