Better configuration, multiline parser fix, USER, PASS, STAT and LIST POP3 commands, mailbox locker
Fixed/improved the configuration parser (this includes a fix to the textual parser for multiline arguments).
Added the following POP3 commands: USER and PASS, for login; STAT, for getting the quantity of messages and their whole in octets; LIST, for listing (or retrieving ID + size) message IDs and sizes.
Added a simple folder locker, to prevent concurrency as the POP3 protocol defines.

--- a/gomaild.conf
+++ b/gomaild.conf
@@ -21,5 +21,5 @@ Settings such as user accounts defined here should be considered as "master": se
 
 set DEBUG = 1;
 
-user `test`
+user `test@stte.com`
 password `tset`;
