Complete POP3 functionality, moved locker, imminent parser rewrite
Complete POP3 functionality.
Added the following POP3 commands: DELE, NOOP, QUIT, RETR, RSET.
Better command implementation.
Added pop3/sentences package to parse the config values (from package config) and return elaborate strings.
Added the following POP3 settings: "start_greeting" and "end_greeting".
Moved locker, but probably won't use it in SMTP (this will lead to a change in the POP3 code: will have to store the state of the mailbox at the start of the session).
Started commenting the code for godoc.
General POP3 code cleanup.
mailboxes package.
pop3/message package.

--- a/gomaild.conf
+++ b/gomaild.conf
@@ -4,9 +4,9 @@ It is parsed by the "textual" parser package, so try to keep a suitable syntax.
 -----
 Current "right" way of using it: first word is a keyword which represents the function to be called in the "config" package,
 using the successive words/symbols as arguments.
-Example: "set DEBUG = true" sets the DEBUG variable to true.
+Example: "debug true" sets the "debug" variable to "true" (parsing/casting to native value, like boolean or integer, is not performed by the configuration reader).
 -----
-To escape spaces (for example, for passwords), wrap the argument with the "`" character (Arch Linux italian keyset: AltGr+Shift+\).
+To escape spaces (for example, for passwords), wrap the argument with the "`" character (Arch Linux italian keyset: AltGr+').
 Example: "user trapped password `some password`" initializes a user with name "trapped" and password "some password".
 -----
 Terminate statements with ";". Omitting it results in a multiline statement. Avoid using it in arguments to prevent misparsing.
@@ -19,7 +19,7 @@ It will be also possible to input commands with the same syntax into the console
 Settings such as user accounts defined here should be considered as "master": servers will look here first, and then in their specific configuration file.
 #
 
-set DEBUG = 1;
+debug true;
 
 user `test@stte.com`
 password `tset`;
