--- a/pop3.conf
+++ b/pop3.conf
@@ -5,4 +5,5 @@ It is parsed by the "textual" parser package, so try to keep a suitable syntax.
 "greeting": defines the greeting message. Optional. Default: empty.
 #
 
-greeting `gomaild POP3 server ready`;
+start_greeting `gomaild POP3 server ready`;
+end_greeting `gomaild POP3 server signing off`;
