--- a/gomaild.conf
+++ b/gomaild.conf
@@ -1,25 +1,54 @@
+# -- gomaild main configuration file --
 #
-gomaild main configuration file
-It is parsed by the "textual" parser package, so try to keep a suitable syntax.
------
-Current "right" way of using it: first word is a keyword which represents the function to be called in the "config" package,
-using the successive words/symbols as arguments.
-Example: "debug true" sets the "debug" variable to "true" (parsing/casting to native value, like boolean or integer, is not performed by the configuration reader).
------
-To escape spaces (for example, for passwords), wrap the argument with the "`" character (Arch Linux italian keyset: AltGr+').
-Example: "user trapped password `some password`" initializes a user with name "trapped" and password "some password".
------
-Terminate statements with ";". Omitting it results in a multiline statement. Avoid using it in arguments to prevent misparsing.
-Whitespace/invisible characters are trimmed away from the start and end of the statements, and if an argument (delimited by spaces) is whitespace/invisible, it is removed.
------
-Blocks delimited by the hashtag character are ignored.
------
-It will be also possible to input commands with the same syntax into the console.
------
-Settings such as user accounts defined here should be considered as "master": servers will look here first, and then in their specific configuration file.
+# It is parsed by the "parsers/config" package, which accepts JSON syntax plus comments (text at the right of an hash ("#") character will be ignored).
 #
+# -----
+#
+# All *.conf files in the executable's directory are merged and parsed. This means you can place the general configuration here, the POP3 stuff in pop3.conf, et cetera.
+#
+# -----
+#
+# The main scope is parsed into the main "Configuration" object.
+#
+# -----
+#
+# Subscopes are parsed into their own object (the scope of the POP3 object is parsed into Configuration.POP3, et cetera).
+#
+# -----
+#
+# Style:
+#   - Object names must be CamelCase.
+#   - Variable names must be snake_case.
+#   - File paths SHOULD be absolute.
 
-debug true;
+{
+    "debug":    true,
+    "domain":   "pellero.it",
 
-user `test@stte.com`
-password `tset`;
+    "POP3": {
+        "start_greeting":   "gomaild POP3 server ready",
+        "end_greeting":     "gomaild POP3 server signing off",
+        "enable_user_cmd":  true,
+        "secure_user_cmd":  true,
+        "fake_dele_cmd":    true
+    },
+    
+    "SMTP": {
+        "start_greeting":               "gomaild ESMTP server ready",
+        "end_greeting":                 "gomaild ESMTP server closing connection",
+        "queued_message":               "message queued",
+        "ehlo_message":                 "you are welcome",
+        "sender_ok_message":            "sender ok",
+        "sender_invalid_message":       "sender invalid",
+        "recipient_ok_message":         "recipient ok",
+        "recipient_invalid_message":    "recipient invalid",
+        "data_start_message":           "go on",
+        "timeout":                      300,
+        "timeout_message":              "timeout"
+    },
+
+    "Accounts": {
+        "test@stte.com":        "tset",
+        "giorgio@pellero.it":   "somepassword"
+    }
+}
