STARTTLS now working

--- a/gomaild.conf
+++ b/gomaild.conf
@@ -44,7 +44,13 @@
         "recipient_invalid_message":    "recipient invalid",
         "data_start_message":           "go on",
         "timeout":                      300,
-        "timeout_message":              "timeout"
+        "timeout_message":              "timeout",
+        "enable_starttls":              true
+    },
+
+    "TLS": {
+        "certificate_file":     "/home/giorgio/server.crt",
+        "certificate_key_file": "/home/giorgio/server.key"
     },
 
     "Accounts": {
