More TLS, AUTH LOGIN
Tweaked the STARTTLS command and some others; also changed some data
structures that I didn't like.
Started working on authentication, and implemented the LOGIN method.
Also added new config variables for the new stuff, and commented more
code.

--- a/gomaild.conf
+++ b/gomaild.conf
@@ -45,7 +45,9 @@
         "data_start_message":           "go on",
         "timeout":                      300,
         "timeout_message":              "timeout",
-        "enable_starttls":              true
+        "enable_starttls":              true,
+        "enable_auth":                  true,
+        "enable_auth_login":            true
     },
 
     "TLS": {
