Added the PLAIN auth mechanism

--- a/gomaild.conf
+++ b/gomaild.conf
@@ -47,7 +47,8 @@
         "timeout_message":              "timeout",
         "enable_starttls":              true,
         "enable_auth":                  true,
-        "enable_auth_login":            true
+        "enable_auth_login":            true,
+        "enable_auth_plain":            true
     },
 
     "TLS": {
