Added CRAM-MD5 authentication mechanism

--- a/gomaild.conf
+++ b/gomaild.conf
@@ -47,8 +47,9 @@
         "timeout_message":              "timeout",
         "enable_starttls":              true,
         "enable_auth":                  true,
-        "enable_auth_login":            true,
-        "enable_auth_plain":            true
+        "enable_auth_login":            false,
+        "enable_auth_plain":            false,
+        "enable_auth_cram_md5":         true
     },
 
     "TLS": {
