POP3 AUTH and STLS, fixes

--- a/gomaild.conf
+++ b/gomaild.conf
@@ -52,6 +52,16 @@
         "enable_auth_cram_md5":         true
     },
 
+    "POP3": {
+        "timeout":                      300,
+        "timeout_message":              "timeout",
+        "enable_stls":                  true,
+        "enable_auth":                  true,
+        "enable_auth_login":            true,
+        "enable_auth_plain":            true,
+        "enable_auth_cram_md5":         true
+    },
+
     "TLS": {
         "certificate_file":     "/home/giorgio/server.crt",
         "certificate_key_file": "/home/giorgio/server.key"
